# gridish

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: parsing.rs  printing.rs
src/: constants.rs  error.rs  grid.rs  lib.rs  osgb.rs  osi.rs  precision.rs  utils.rs
src/coordinates/: metres.rs  mod.rs  point.rs
tests/api/: data.rs  main.rs  osgb.rs  osi.rs
