[package]
name = "gridish"
version = "0.1.1"
edition = "2021"
description = "Library for working with British and Irish national grid strings."
authors = ["Berwyn Powell"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BIS-Brecon/gridish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.13"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parsing"
harness = false
