[package]
name = "gridish"
version = "1.0.0"
edition = "2021"
description = "Library for working with British and Irish national grid strings."
authors = ["Berwyn Powell"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BIS-Brecon/gridish"

[features]
tetrads = []

[dependencies]
geo-types = "0.7.13"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
serde_json = "1.0"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "printing"
harness = false
